--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@vee-validate/yup": "^4.12.5",
+    "aws-amplify": "^6.0.23",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "pinia": "^2.1.7",
     "vee-validate": "^4.5.8",
     "vue": "^3.3.11",
     "vue-router": "^4.3.0",
+    "vuelidate": "^0.7.7",
     "vuetify": "^3.5.6"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@vitejs/plugin-vue": "^4.5.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
