--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aws-amplify": "^6.0.23",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "js-cookie": "^3.0.5",
     "pinia": "^2.1.7",
     "vee-validate": "^4.5.8",
     "vue": "^3.3.11",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/js-cookie": "^3.0.6",
     "@vitejs/plugin-vue": "^4.5.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
