--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/js-cookie": "^3.0.6",
     "@vitejs/plugin-vue": "^4.5.2",
+    "dotenv": "^16.4.5",
+    "dotenv-webpack": "^8.1.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vue-tsc": "^1.8.25"
