arreglando conflicto entre ramas

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # ENDPOINT = https://q9h75ltq6a.execute-api.us-east-1.amazonaws.com
-VITE_ENDPOINT = https://q9h75ltq6a.execute-api.us-east-1.amazonaws.com
+VITE_ENDPOINT = https://ixga87ibvd.execute-api.us-east-1.amazonaws.com
