--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vee-validate": "^4.5.8",
     "vue": "^3.3.11",
     "vue-router": "^4.3.0",
+    "vue-sweetalert2": "^5.0.5",
     "vuelidate": "^0.7.7",
     "vuetify": "^3.4.0-beta.1"
   },
@@ -28,6 +29,8 @@
     "@vitejs/plugin-vue": "^4.5.2",
     "dotenv": "^16.4.5",
     "dotenv-webpack": "^8.1.0",
+    "sass": "^1.74.1",
+    "sass-loader": "^14.2.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vue-tsc": "^1.8.25"
