--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.5",
     "pinia": "^2.1.7",
+    "v-pagination": "^0.1.4",
     "vee-validate": "^4.5.8",
     "vue": "^3.3.11",
+    "vue-cookies-ts": "^1.5.19",
     "vue-router": "^4.3.0",
     "vue-sweetalert2": "^5.0.5",
     "vuelidate": "^0.7.7",
@@ -33,6 +35,7 @@
     "sass-loader": "^14.2.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
+    "vite-plugin-html": "^3.2.2",
     "vue-tsc": "^1.8.25"
   }
 }
